! important change
+ new feature or minor change
- bugfix

future release (aka current master branch):
+  update turkish translation
+  use UPX for builds to produce smaller binaries and hopefully slightly less antivirus false positives
-  fix cut off header in build.log
-  removed hotfix for issues between keyring and PyInstaller

v008:
!  refactored gui code
!  more secure handling of sonys self signed certificate
+  open configuration window when no configuration file is found
+  generate "build.log" when building releases
+  include pysimplegui version in logs for easier debugging
+  include python version in logs for easier debugging
+  proxy support (only SOCKS5)
+  improve configuration window layout
+  add CHANGELOG to builds
+  add thai translation thanks to https://github.com/CENSOR1337
+  add russian translation thanks to https://github.com/andoleal
+  add turkish translation thanks to https://steamcommunity.com/profiles/76561198045705212/
+  add italian translation thanks to https://github.com/Strappazzon
-  fix changelog being cutoff in update notification window
-  fix updater on linux
-  fix handling unicode languages
-  minor typos in english translation
-  fix cutoff strings
-  fix crash when available disc space is below threshold
-  hotfix for issues between keyring and PyInstaller
-  inform user when no viable keyring backend could be found

v007:
-  fixed main window becoming malfunctional when pressing download in the queue window with an empty queue
-  retranslate main window when changing language
+  load english string as fallback when the current localization doesnt contain the wanted string
+  added sorting and removal of entrys to the queue management
+  improved select window
+  every run now has its own logfile
-  prevent the same update being added to queue multiple times
-  fix crashes in queue management
+  check if download directory is writeable
+  added percentage and download speed to main window when downloading