@@ -5,6 +5,7 @@
 future release (aka current master branch):
 +  update turkish translation
 +  use UPX for builds to produce smaller binaries and hopefully slightly less antivirus false positives
++  added an icon to the executable and the windows
 -  fix cut off header in build.log
 -  removed hotfix for issues between keyring and PyInstaller
 
